objects/Ecommerce_User__c.object
<CustomObject>
    <description>This Object will store information about the Ecommerce Users for a given Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ecommerce Users</relationshipLabel>
        <relationshipName>Ecommerce_Users</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ecommerce_User_Name__c</fullName>
        <description>IDEXX Internal user unique key</description>
        <externalId>true</externalId>
        <label>IDEXX Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Created_Date__c</fullName>
        <description>Date Time when user was created</description>
        <label>User Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Default_Locale_CD__c</fullName>
        <description>Locale Code of User</description>
        <label>User Default Locale CD</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Fax__c</fullName>
        <label>User Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_First_Name__c</fullName>
        <label>User First Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Last_Login_Date__c</fullName>
        <description>Last Login Date and Time</description>
        <label>User Last Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Last_Name__c</fullName>
        <label>User Last Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Telephone__c</fullName>
        <label>User Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ecommerce User</label>
    <nameField>
        <label>Ecommerce User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ecommerce Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>